[RKE] [TEST] save.